Withdraw partial maximization state when resizing partially maximized client but moveResizeMaximizedWindows() isn't true

REVIEW: 103683
BUG: 290990
FIXED-IN: 4.8